[gd_scene load_steps=2 format=3 uid="uid://2ir6me3aj8o7"]

[ext_resource type="Script" path="res://Menus/MainMenu/title_screen.gd" id="1_5vuao"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5vuao")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="Server" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Server"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Start" to="." method="select_start_button"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Start" to="." method="deselect_buttons"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="activate_start_button"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Settings" to="." method="select_settings_button"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Settings" to="." method="deselect_buttons"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="activate_settings_button"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Server" to="." method="select_server_button"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Server" to="." method="deselect_buttons"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Server" to="." method="activate_server_button"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Quit" to="." method="select_quit_button"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Quit" to="." method="deselect_buttons"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="activate_quit_button"]
